
2010-06-28  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.5

2010-06-24  Paulo Pizarro <paulo.pizarro@gmail.com>
	* refactory of the su_timer module
	* nua only will be collected after shutdown complete

2010-06-23  Tiago Katcipis <tiagokatcipis@gmail.com>
	* created msg module with params_find function

2010-06-23  Paulo Pizarro <paulo.pizarro@gmail.com>
	* implemented function get_proxy_authenticate on the module 'sip'

2010-06-22  Paulo Pizarro <paulo.pizarro@gmail.com>
	* support to sofia devel (1.12.11) library (configure --enable-sofia-devel)
	* Added more tport tags: TPTAG_TLS_VERIFY_POLICY, TPTAG_TLS_VERIFY_DEPTH, 
	  TPTAG_TLS_VERIFY_DATE, TPTAG_TLS_VERIFY_SUBJECT. (only 1.12.11)
	* implemented su_timer_is_set (only 1.12.11)

2010-06-21  Tiago Katcipis <tiagokatcipis@gmail.com>
	* fixed possible segfault on su_timer callback.

2010-06-17  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.5devel
	* luasofia_tags: if 'value' is nil not use this tag.
	* fixed glib module name (sofia.glib).
	* fixed configure.ac to default lua paths

2010-06-16  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.4
	* Changed module's name from 'luasofia' to 'sofia'
	* Changed library's name from 'libluasofia.so' to 'liblua5.1-sofia.so'
	* Changed library's name from 'libluasofia-glib.so' to 'liblua5.1-sofia-glib.so'

2010-06-09  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.4devel
	* Fixed core on luasofia.nua.__gc
	* Fixed core on callback where trying to access an already colleted nua userdata.

2010-06-07  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.3
	* Changed luasofia.nua.create function to receive a magic param.
	* Callback function return magic value.

2010-06-04  Paulo Pizarro <paulo.pizarro@gmail.com>
	* Implemented nua_handle_bind to bind nua handle with hmagic param.
	* Callback functions returns hmagic value.
